--- a/.github/workflows/gpt_server_base.yml
+++ b/.github/workflows/gpt_server_base.yml
@@ -6,7 +6,7 @@ on:
     - published # 当发布新的 release 时触发
   push:
     branches:
-    - build_image # 在推送到 build_image 分支时触发构建
+    - push_gpt_server_base # 在推送到 build_image 分支时触发构建
 
 jobs:
 
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: "cuda:12.2.0-runtime-ubuntu20.04-uv" # 这里用于设置镜像名称
+      IMAGE_TAG: "gpt_server:base" # 这里用于设置镜像名称
 
     steps:
     # 检出代码
@@ -25,7 +25,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     # 构建 Docker 镜像
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} gpt_server_base_Dockerfile
     # 推送镜像到 Docker Hub
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }}
