--- a/.github/workflows/cuda:12.2.0-runtime-ubuntu20.04-uv.yml
+++ b/.github/workflows/cuda:12.2.0-runtime-ubuntu20.04-uv.yml
@@ -25,7 +25,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     # 构建 Docker 镜像
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} Dockerfile
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} -f Dockerfile .
     # 推送镜像到 Docker Hub
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }}
