--- a/.github/workflows/postgres-vector-age.yml
+++ b/.github/workflows/postgres-vector-age.yml
@@ -22,7 +22,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     # 构建 Docker 镜像
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} ./postgres-vector-age -f Dockerfile .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }} ./postgres-vector-age
     # 推送镜像到 Docker Hub
     - name: Push Docker image
       run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_TAG }}
